--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
     body{
       background-color: floralwhite;
-        width:80%;
+        width:100%;
         height:100%;
         margin:auto;
     }
@@ -57,3 +57,13 @@ h3{
   font-style:italic;
 }
 
+#Div1{
+  background-color:#D4DDD7;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+#Div2{
+  width:80%;
+  margin:auto;
+}
