--- a/style.css
+++ b/style.css
@@ -30,11 +30,10 @@
    }
 
    .photo{
+     border:10px double black;
      border-radius:35px;
      height:300px;
      display:inline-block;
-     padding-top: 25px;
-     padding-bottom: 25px;
    }
 
 h1{
